# city-data

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: admin.py  authentication.py  exceptions.py  models.py  serializers.py  urls.py  views.py
backend/migrations/: 0001_initial.py  0002_rename_cities_city.py  0003_alter_city_creation_date.py  0004_city_last_update_alter_city_name.py  0005_enduser_remove_city_country_city_creation_by_and_more.py  0006_rename_enduser_apiuser.py
backend_build/: apps.py  exceptions.py  owm_request.py  urls.py  views.py
city_data/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: HeaderBar.tsx  HeaderMenu.tsx  Markers.tsx  WeatherChart.tsx  WeatherCharts.tsx  WeatherChartsUI.tsx  header-bar.tsx  header-menu.tsx
frontend/src/interfaces/: CityData.ts  MenuItem.ts  WeatherData.ts
frontend/src/pages/: About.tsx  Map.tsx
frontend/src/sass/: main.scss
frontend/src/sass/abstracts/: _variables.scss
frontend/src/sass/base/: _animations.scss  _base.scss  _typography.scss
frontend/src/sass/components/: _about-card.scss  _about-icon.scss  _chart-back.scss  _chart-conatiner-element.scss  _chart-row.scss  _chart-title-element.scss  _header-bar.scss  _header-menu-list.scss  _header-menu.scss
frontend/src/sass/pages/: _about.scss  _map.scss
requests/: air_quality.py
