[tool.poetry]
name = "city-data"
version = "0.1.0"
description = ""
authors = ["Dale Millington <dkmillington@tutanota.com>"]
readme = "README.md"
packages = [{include = "city_data"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-rest-framework = "^0.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
